--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "HackerNews",
+  "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -22,7 +24,11 @@
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "@expo/webpack-config": "^0.10.5",
+    "@expo/electron-adapter": "^0.0.0-alpha.10",
+    "babel-preset-expo": "^7.1.0",
+    "electron": "^6.0.12",
+    "electron-builder": "^21.2.0"
   },
   "private": true
 }
