--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "react-firebase-hooks": "^2.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-paper": "^3.3.0",
+    "react-native-render-html": "^4.1.2",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "7.0.5",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
-    "@expo/webpack-config": "^0.10.5",
     "@expo/electron-adapter": "^0.0.0-alpha.10",
+    "@expo/webpack-config": "^0.10.5",
     "babel-preset-expo": "^7.1.0",
     "electron": "^6.0.12",
     "electron-builder": "^21.2.0"
