--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
     "name": "HackerNews",
-    "slug": "hackernewsxp",
+    "slug": "hackernewsdotapp",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,7 +14,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ff6600"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
